# lesson-Timer

./: buildozer.spec  main.py
.buildozer/: state.db
lessontimer/: CHANGELOG  LICENSE  README.rst  pyproject.toml
lessontimer/src/berhans_lesson_timer/: __main__.py  app.py
